# KeepHeartProxy

./: CMakeLists.txt
cmake_modules/: AutoGenVer.cmake  fdbus.cmake
dsrc/: CMakeLists.txt  KeepHeartProxy..cpp  KeepHeartProxy.cpp  KeepHeartProxy.h  LoadPlugin.cpp  LoadPlugin.h  ProxyLoadPlugin.cpp  ProxyLoadPlugin.h  SkyProxy.cpp  SkyProxy.h  qt_bll_proxy.cpp  qt_bll_proxy.h  qt_bll_proxy_global.h  qt_dvrapi_proxy.cpp  qt_dvrapi_proxy.h  skylog.h  yps_app_config.c  yps_app_config.h
plugins/: CMakeLists.txt
plugins/FM_Si475x/: CMakeLists.txt  Drv_Si4754C.c  Drv_Si4754C.h  GpioLib.c  GpioLib.h  PluginFm_Si4754.cpp  PluginFm_Si4754.h  delay.c  delay.h  readme  si475x6x9x_common.c  si475x6x9x_common.h  si475x6x_commanddefs.h  si475x6x_common.c  si475x6x_common.h  si475x6x_patchdata.c  si475x6x_patchdata_gb.c  si475x6x_propertydefs.h  si475x6x_seek.c  si475x6x_seek.h  si475x_core.c  si475x_core.h  si475x_extend.c  si475x_extend.h  si47xx_tuner_api_core.c  si47xx_tuner_api_core.h  si47xx_tuner_api_extend.c  si47xx_tuner_api_extend.h  typedefs.h
plugins/FdbusDemo/: CMakeLists.txt  FdbusDemo.cpp  FdbusDemo.h  MsgDef.h  logdef.h
plugins/Icm680/: CMakeLists.txt  Icm680Interface.cpp  Icm680Interface.h  icm42680.cpp  icm42680.h  log.h  mahony_filter.cpp  mahony_filter.h
plugins/McuParser/: CMakeLists.txt  McuData.h  McuDef.h  McuInterface.cpp  McuInterface.h  McuParser.cpp  McuParser.h
plugins/McuParser_LGNJ/: CMakeLists.txt  McuData.h  McuDef.h  McuInterface.cpp  McuInterface.h  McuParser.cpp  McuParser.h  lgnj_log.h
plugins/MplayerClient/: CMakeLists.txt  MplayerClient.cpp  MplayerClient.h
plugins/MusicClient/: CMakeLists.txt  MusicClient.cpp  MusicClient.h  tools.h
plugins/MusicClient/id3v2/: ID3v2.cpp  ID3v2.h  ID3v2_ID.h  ID3v2_Return.cpp  ID3v2_Set.cpp  ID3v2_Structs.h
plugins/PluginConfig/: CMakeLists.txt  PluginCfg.cpp  PluginCfg.h  PluginConfig.cpp  PluginConfig.h
plugins/Pt2314/: CMakeLists.txt  PluginSE_pt2313.cpp  PluginSE_pt2313.h  log.h  pt2313e.cpp  pt2313e.h
plugins/Rad5807plugin/: CMakeLists.txt  PluginRDAFM5808.cpp  PluginRDAFM5808.h  ReadMe.md  rdafm_drv_V5.1.c  rdafm_drv_V5.1.h
plugins/SysCtrl/: CMakeLists.txt  SysCtl.cpp  SysCtl.h
plugins/VoiceModule/: CMakeLists.txt  VoiceData.h  VoiceModuleDef.h  VoiceModuleInterface.cpp  VoiceModuleInterface.h  VoiceModuleParser.cpp  VoiceModuleParser.h  ver.h.in
plugins/bd37033/: CMakeLists.txt  PluginSE_bd3703.h  PluginSE_bd37033.cpp  bd37033.cpp  bd37033.h  dap.h  log.h
plugins/glbErrCodePrase/: CMakeLists.txt  ErrPraser_glb.cpp  ErrPraser_glb.h
proxy/: CMakeLists.txt  KeepHeartProxy.cpp  KeepHeartProxy.h  KeepHeartProxyLog.h  ProxyLoadPlugin.h  ver.h
public/: CMakeLists.txt
public/cjson/: CMakeLists.txt  JsonWrapper.cpp  JsonWrapper.h  cJSON.c
public/database/sqlit3/lib/pkgconfig/: sqlite3.pc
public/mcu_comm_lib/: CMakeLists.txt  LoopBuffer.cpp  McuParserBase.cpp  McuParserBase.h  McuSerial.cpp  McuSerial.h  Serial.cpp  Serial.h
public/parse/: CMakeLists.txt  ParserBase.cpp  ParserBase.h  README.md  SerialParseCollection.cpp  SerialParseCollection.h
public/pluginsManger/: PluginFdbusAdapter.cpp  PluginFdbusAdapter.h  PluginInterface.h
public/utils/: AsyncSerialCall.cpp  AsyncSerialCall.h  CMakeLists.txt  csv.h
public/utils/Async/: AsyncCall.cpp  AsyncCall.h
public/utils/Buffer/: LoopBuffer.cpp  LoopBuffer.h
public/utils/Communication/Serial/: Serial.cpp
public/utils/Communication/Socket/: SkyConfig.h  SkyIPCClient.cpp  SkyIPCClient.h  SkyIPCServer.cpp  SkyIPCServer.h  SocketHelper.cpp  SocketHelper.h  functor.h
public/utils/File/: FHelper.cpp  FHelper.h
public/utils/Log/: Log.h
public/utils/Singleton/: singleton.h
public/utils/Sonic/include/sonic/dom/: genericnode.h  handler.h
public/utils/Sonic/sonic/: allocator.h  error.h  sonic.h  string_view.h  writebuffer.h
public/utils/Sonic/sonic/dom/: dynamicnode.h  generic_document.h  genericnode.h  handler.h  json_pointer.h  parser.h  schema_handler.h  serialize.h  type.h
public/utils/Sonic/sonic/internal/: atof_native.h  ftoa.h  itoa.h  parse_number_normal_fast.h  stack.h
public/utils/Sonic/sonic/internal/arch/avx2/: base.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
public/utils/Sonic/sonic/internal/arch/common/: skip_common.h
public/utils/Sonic/sonic/internal/arch/common/x86_common/: itoa.h
public/utils/Sonic/sonic/internal/arch/neon/: itoa.h  quote.h
public/utils/Sonic/sonic/internal/arch/sse/: base.h  quote.h  simd.h  skip.h  str2int.h  unicode.h
sqlit3/lib/: libsqlite3.la  libsqlite3.so.0.8.6
test/: CMakeLists.txt  CmdDef.h  testmain.cpp
